syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf.smart";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "google/protobuf/wrappers.proto";

message SetScriptTransaction {
  bytes id = 1;
  int32 chain_id = 2;
  bytes sender_public_key = 3;
  google.protobuf.BytesValue script = 4;
  bytes name = 5;
  bytes description = 6;
  int64 fee = 7;
  int64 timestamp = 8;
  repeated bytes proofs = 9;
  bytes sender_address = 10;
}